--- a/AppWidget/src/main/res/layout/float_wx_view.xml
+++ b/AppWidget/src/main/res/layout/float_wx_view.xml
@@ -9,6 +9,16 @@
     android:background="#484258">
 
     <ImageView
+        android:id="@+id/fl_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+
+    <ImageView
         android:id="@+id/iv_video_back"
         android:layout_width="44dp"
         android:layout_height="44dp"
