--- a/Business/LibraryLayer/src/main/res/layout/item_base_easy_image.xml
+++ b/Business/LibraryLayer/src/main/res/layout/item_base_easy_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="60dp"
     android:scaleType="centerCrop"
     android:src="@drawable/bg_kites_min">
