--- a/Business/DemoBusiness/src/main/res/layout/activity_scroll_view.xml
+++ b/Business/DemoBusiness/src/main/res/layout/activity_scroll_view.xml
@@ -21,7 +21,7 @@
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_behavior="com.yc.library.weight.AppBarLayoutBehavior"
+            app:layout_behavior="com.yc.coordinatorlayout.AppBarLayoutBehavior"
             android:fitsSystemWindows="true">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
