--- a/Business/AnimBusiness/src/main/res/drawable/animation_list_load.xml
+++ b/Business/AnimBusiness/src/main/res/drawable/animation_list_load.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<animation-list xmlns:android="http://schemas.android.com/apk/res/android">
+<animation-list
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:oneshot="true">
     <item
         android:drawable="@drawable/icon_audio_3"
         android:duration="400"/>
