--- a/Business/AnimBusiness/src/main/res/layout/activity_frame_anim.xml
+++ b/Business/AnimBusiness/src/main/res/layout/activity_frame_anim.xml
@@ -34,8 +34,7 @@
     <ImageView
         android:id="@+id/iv_frame_anim2"
         android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/icon_audio_1"/>
+        android:layout_height="40dp"/>
 
 
 </LinearLayout>
