--- a/Business/AnimBusiness/src/main/res/layout/activity_anim_main.xml
+++ b/Business/AnimBusiness/src/main/res/layout/activity_anim_main.xml
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp10"
-        android:text="5.购物车抛物线动画案例(大搜车)"
+        android:text="5.Transition框架动画大合集案例"
         android:padding="@dimen/dp10"
         android:background="@color/colorAccent"/>
 
