--- a/AppMonitor/src/main/res/layout/activity_monitor_main.xml
+++ b/AppMonitor/src/main/res/layout/activity_monitor_main.xml
@@ -96,6 +96,20 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_crash_test"/>
 
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_apm_test"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="7.APM测试小工具案例"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_crash_test"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
