--- a/AppLeet/src/main/res/layout/activity_leet_node.xml
+++ b/AppLeet/src/main/res/layout/activity_leet_node.xml
@@ -32,7 +32,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@color/colorAccent"
                 android:padding="10dp"
-                android:text="2.删除数组中的重复数据"/>
+                android:text="2.简单实现双向链表的功能"/>
 
 
             <TextView
@@ -42,7 +42,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@color/colorAccent"
                 android:padding="10dp"
-                android:text="3.啤酒和饮料"/>
+                android:text="3.简单实现循环链表的功能"/>
 
 
             <TextView
