--- a/AppLeet/src/main/res/layout/activity_leet_queue.xml
+++ b/AppLeet/src/main/res/layout/activity_leet_queue.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/colorAccent"
                 android:padding="10dp"
-                android:text="1.用类实现数组，有增删查等操作"/>
+                android:text="1.用数组实现顺序队列案例"/>
 
             <TextView
                 android:id="@+id/tv_2"
@@ -32,7 +32,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@color/colorAccent"
                 android:padding="10dp"
-                android:text="2.删除数组中的重复数据"/>
+                android:text="2."/>
 
 
             <TextView
@@ -42,7 +42,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@color/colorAccent"
                 android:padding="10dp"
-                android:text="3.啤酒和饮料"/>
+                android:text="3."/>
 
 
             <TextView
@@ -52,7 +52,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@color/colorAccent"
                 android:padding="10dp"
-                android:text="4.数组中只出现一次的数字"/>
+                android:text="4."/>
 
 
 
