feat：完善通用缓存方案

--- a/Business/JetpackBusiness/src/main/res/navigation/home_nav_graph.xml
+++ b/Business/JetpackBusiness/src/main/res/navigation/home_nav_graph.xml
@@ -60,5 +60,7 @@
         android:id="@+id/actionViewModelActivity"
         app:destination="@id/viewModelActivity" />
 
+    <!--在nav中嵌套分支nav，避免nav文件过大-->
+    <include app:graph = "@navigation/sample_nav_graph"/>
 
 </navigation>
