--- a/AppWidget/src/main/res/layout/activity_widget_base.xml
+++ b/AppWidget/src/main/res/layout/activity_widget_base.xml
@@ -9,144 +9,132 @@
     android:orientation="vertical">
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_round"
+        android:id="@+id/tv_widget_1"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="1.圆角控件各种案例，别再用shape"
+        android:text="1."
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_image"
+        android:id="@+id/tv_widget_2"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="2.各种图片控件"
+        android:text="2."
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_span"
+        android:id="@+id/tv_widget_3"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="3.各种span文本控件"
+        android:text="3."
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_chart"
+        android:id="@+id/tv_widget_4"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="4.各种图表控件展示"
+        android:text="4."
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_shadow"
+        android:id="@+id/tv_widget_5"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="5.阴影效果自定义控件"
+        android:text="5."
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_zoom"
+        android:id="@+id/tv_widget_6"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="6.图片查看器"
+        android:text="6."
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_red"
+        android:id="@+id/tv_widget_7"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="7.自定义完全解耦合小红点"
+        android:text="7."
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_float"
+        android:id="@+id/tv_widget_8"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="8.自定义悬浮控件案例"
+        android:text="8."
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_blur"
+        android:id="@+id/tv_widget_9"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="9.自定义高斯模糊背景视图"
+        android:text="9."
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_banner"
+        android:id="@+id/tv_widget_10"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="10.自定义轮播图banner"
+        android:text="10."
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
 
     <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_bar"
+        android:id="@+id/tv_widget_11"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:text="11.各种状态栏设置案例"
-        android:textSize="18sp"
-        android:background="@color/colorAccent"
-        app:rRadius="20dp" />
-
-    <com.yc.roundcorner.view.RoundTextView
-        android:id="@+id/tv_widget_notify"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:gravity="left|center_vertical"
-        android:paddingLeft="20dp"
-        android:text="12.自定义下拉通知栏"
+        android:text="11."
         android:textSize="18sp"
         android:background="@color/colorAccent"
         app:rRadius="20dp" />
