--- a/Business/KotlinBusiness/src/main/res/layout/kotlin_activity_main.xml
+++ b/Business/KotlinBusiness/src/main/res/layout/kotlin_activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="3."
+        android:text="3.将Kotlin协程与LiveData一起使用"
         android:background="@android:color/darker_gray"
         android:padding="10dp"/>
 
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="4."
+        android:text="4.将Kotlin协程与ViewModel一起使用"
         android:background="@android:color/darker_gray"
         android:padding="10dp"/>
 
