--- a/Business/NotifyBusiness/src/main/res/layout/notify_custom_view.xml
+++ b/Business/NotifyBusiness/src/main/res/layout/notify_custom_view.xml
@@ -1,50 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="#80000000">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/custom_icon"
-        android:layout_width="50dip"
-        android:layout_height="50dip"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="5dip"
-        android:padding="5dip"
-        android:src="@mipmap/icon" />
+    <com.yc.roundcorner.viewgroup.RoundLinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="horizontal"
+        app:rRadius="10dp"
+        android:background="@color/color_f25057">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_vertical">
-        <TextView
-            android:id="@+id/tv_custom_title"
+        <ImageView
+            android:id="@+id/custom_icon"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="10dip"
+            android:padding="5dip"
+            android:src="@mipmap/icon" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_vertical">
+            <TextView
+                android:id="@+id/tv_custom_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:textColor="@android:color/black"
+                android:text="这个是标题"
+                android:textSize="15sp" />
+            <TextView
+                android:id="@+id/tv_custom_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:textColor="@android:color/black"
+                android:text="这个是文本内容"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_click"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:textColor="@android:color/white"
-            android:text="这个是标题"
-            android:textSize="15sp" />
-        <TextView
-            android:id="@+id/tv_custom_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textColor="@android:color/white"
-            android:text="这个是文本内容"
-            android:textSize="12sp" />
-    </LinearLayout>
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:text="点击"/>
 
-    <Button
-        android:id="@+id/btn_click"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:text="点击"/>
+    </com.yc.roundcorner.viewgroup.RoundLinearLayout>
 
 </LinearLayout>
