--- a/AppWidget/src/main/res/layout/view_pop_custom.xml
+++ b/AppWidget/src/main/res/layout/view_pop_custom.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorAccent">
 
     <LinearLayout
         android:gravity="center_horizontal"
