--- a/Business/BleBusiness/src/main/res/layout/activity_chat.xml
+++ b/Business/BleBusiness/src/main/res/layout/activity_chat.xml
@@ -19,11 +19,13 @@
         android:textColor="@color/colorWhite"
         android:background="@color/colorPrimary"
         android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:paddingBottom="10dp"
         android:layout_height="wrap_content" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvChat"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:layout_height="0dp"/>
