--- a/AppServer/src/main/res/layout/activity_server_main.xml
+++ b/AppServer/src/main/res/layout/activity_server_main.xml
@@ -98,6 +98,48 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_net_test"/>
 
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_ble_1"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="8.1 最简单版本蓝牙案例"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_file_test"/>
+
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_ble_2"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="8.2 蓝牙实现聊天的功能"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_ble_1"/>
+
+        <com.yc.roundcorner.view.RoundTextView
+            android:id="@+id/tv_ble_3"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="@dimen/dp20"
+            android:text="8.3 蓝牙综合功能案例库"
+            android:textSize="@dimen/textSize18"
+            android:background="@color/priority_green"
+            android:layout_marginTop="@dimen/dp20"
+            app:rRadius="@dimen/dp20"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_ble_2"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
