--- a/AppGrpc/src/main/res/layout/activity_rpc_main.xml
+++ b/AppGrpc/src/main/res/layout/activity_rpc_main.xml
@@ -48,7 +48,7 @@
             android:layout_height="40dp"
             android:gravity="left|center_vertical"
             android:paddingLeft="20dp"
-            android:text="3."
+            android:text="3.gRPC的四种通信模式"
             android:textSize="18sp"
             android:background="@color/purple_200"
             android:layout_marginTop="20dp"
