--- a/AppGrpc/src/main/res/layout/activity_rpc_main.xml
+++ b/AppGrpc/src/main/res/layout/activity_rpc_main.xml
@@ -62,7 +62,7 @@
             android:layout_height="40dp"
             android:gravity="left|center_vertical"
             android:paddingLeft="20dp"
-            android:text="4."
+            android:text="4.对比json和proto效率测试"
             android:textSize="18sp"
             android:background="@color/purple_200"
             android:layout_marginTop="20dp"
