--- a/AppCommon/src/main/res/layout/activity_common_main.xml
+++ b/AppCommon/src/main/res/layout/activity_common_main.xml
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:gravity="center"
-            android:text=""/>
+            android:text="网络案例"/>
         <Button
             android:id="@+id/btn_sp3"
             android:layout_width="wrap_content"
