--- a/AppWidget/src/main/res/layout/activity_image_view.xml
+++ b/AppWidget/src/main/res/layout/activity_image_view.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.yc.appimageview.RoundCornerImageView
+    <com.yc.clickhelper.RoundCornerImageView
         android:id="@+id/iv_image1"
         android:layout_margin="10dp"
         android:layout_width="100dp"
@@ -17,7 +17,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.yc.appimageview.RoundCornerImageView
+    <com.yc.clickhelper.RoundCornerImageView
         android:id="@+id/iv_image2"
         android:layout_margin="10dp"
         android:layout_width="100dp"
@@ -29,7 +29,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_image1" />
 
-    <com.yc.appimageview.RoundImageView
+    <com.yc.clickhelper.RoundImageView
         android:id="@+id/iv_image3"
         android:layout_margin="10dp"
         android:layout_width="100dp"
@@ -41,7 +41,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_image2" />
 
-    <com.yc.appimageview.RoundImageView
+    <com.yc.clickhelper.RoundImageView
         android:id="@+id/iv_image4"
         android:layout_margin="10dp"
         android:layout_width="100dp"
@@ -53,7 +53,7 @@
         app:layout_constraintLeft_toRightOf="@+id/iv_image2"
         app:layout_constraintTop_toBottomOf="@+id/iv_image2" />
 
-    <com.yc.appimageview.RoundImageView
+    <com.yc.clickhelper.RoundImageView
         android:id="@+id/iv_image5"
         android:layout_margin="10dp"
         android:layout_width="100dp"
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toBottomOf="@+id/iv_image2" />
 
 
-    <com.yc.appimageview.RoundImageView
+    <com.yc.clickhelper.RoundImageView
         android:id="@+id/riv_image6"
         android:layout_width="100dp"
         android:layout_height="80dp"
