--- a/WidgetLib/SecondaryScreen/src/main/res/layout/display_screen_view.xml
+++ b/WidgetLib/SecondaryScreen/src/main/res/layout/display_screen_view.xml
@@ -2,6 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fl_display_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
