--- a/MonitorLib/MonitorPhone/src/main/res/layout/fragment_phone_all_info.xml
+++ b/MonitorLib/MonitorPhone/src/main/res/layout/fragment_phone_all_info.xml
@@ -129,6 +129,16 @@
                 android:textColor="#8033b7"
                 android:background="#50cfa0f1"
                 style="@style/DetailContent"/>
+
+            <TextView
+                style="@style/DetailTitle"
+                android:text="敏感属性"/>
+
+            <TextView
+                android:id="@+id/tv_content_mg"
+                android:textColor="#8033b7"
+                android:background="#50cfa0f1"
+                style="@style/DetailContent"/>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
