--- a/AppWebView/src/main/res/layout/activity_ten.xml
+++ b/AppWebView/src/main/res/layout/activity_ten.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.ycbjie.slide.SlideLayout
+    <SlideLayout
         android:id="@+id/slideDetailsLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,7 +21,7 @@
         <include layout="@layout/include_shop_detail"/>
 
 
-    </com.ycbjie.slide.SlideLayout>
+    </SlideLayout>
 
 
 
