--- a/AppMvx/src/main/res/layout/item_wifi_rv.xml
+++ b/AppMvx/src/main/res/layout/item_wifi_rv.xml
@@ -11,9 +11,9 @@
         android:id="@+id/tv_wifi_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:text="Wifi 名称"
+        android:textStyle="bold"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,9 +22,8 @@
         android:id="@+id/tv_wifi_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="2dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="10dp"
         android:text="Wifi 状态"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +34,7 @@
         android:id="@+id/tv_signal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="10dp"
         android:text="Wifi 信号等级"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_wifi_state"
