--- a/MmapLog/src/main/res/layout/activity_mmap_log.xml
+++ b/MmapLog/src/main/res/layout/activity_mmap_log.xml
@@ -5,14 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="15dp"
-    tools:context="me.pqpo.log4a.MainActivity">
+    android:padding="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:context="me.pqpo.log4a.MainActivity">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
